# easyT

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_error.rs  lib.rs  main.rs  shortcut.rs
src-tauri/src/commands/: clipboard.rs  config.rs  mod.rs  selection.rs  shortcut.rs  translate.rs  window.rs
src-tauri/src/config/: mod.rs  models.rs  storage.rs
src-tauri/src/llm/: client.rs  error.rs  mod.rs  models.rs  prompt.rs
src-tauri/src/platform/: mod.rs  windows.rs
src/components/: ErrorState.tsx  LoadingState.tsx  MarkdownTranslation.tsx  OriginalTextPanel.tsx  ShortcutInput.tsx  TranslationHeader.tsx  TranslationPanel.tsx
src/components/ui/: Button.tsx  Field.tsx  Input.tsx  Switch.tsx
src/lib/: utils.ts
src/pages/: SettingsPage.tsx  TranslationPage.tsx
src/services/: tauriCommands.ts
src/stores/: settingsStore.ts  translationStore.ts
src/types/: index.ts
